# amplify-stateless-microservice

./: .gitignore  README.md  aggregate_openapi.py  pyproject.toml
.github/workflows/: publish-auth-server.yml
auth-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.sql
auth-service/auth_service/: api.py  config.py  main.py
examples/authenticated_service/: Dockerfile  README.md  pyproject.toml
examples/authenticated_service/authenticated_service/: main.py  processor.py
examples/base64_grayscale_service/: Dockerfile  README.md  docker-compose.yml  grayscale_client.py  pyproject.toml
examples/base64_grayscale_service/base64_grayscale_service/: __init__.py  main.py  processor.py
examples/image_format_conversion_service/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  processor.py  pyproject.toml
examples/image_format_conversion_service/image_format_conversion_service/: main.py
examples/string_appender_service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/string_appender_service/string_appender_service/: main.py  processor.py
infrastructure/auth-server/: .env.example  Dockerfile  README.md  docker-compose.yml
scripts/: aggregate_openapi.py
stateless_api_platform/: __init__.py  api.py  config.py  direct.py  processor.py
stateless_microservice/: __init__.py  aggregate_openapi.py  apache_conf.py  api.py  auth.py  config.py  direct.py  models.py  processor.py  storage.py
stateless_microservice/auth_service/: api.py  cli.py  commands.py  config.py  main.py  models.py
tests/: test_validation_errors.py
