[project]
name = "amplify-stateless"
version = "1.3.2"
description = "Microservice library for building stateless microservices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
auth = [
    "httpx>=0.24.0",
]
auth-server = [
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
]
test = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
amplify-auth-server = "stateless_microservice.auth_service.main:main"
amplify-auth-cli = "stateless_microservice.auth_service.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "stateless_microservice",
]
