[project]
name = "image-format-conversion-service"
version = "0.1.0"
description = "Example microservice that converts S3 images with the stateless-microservice toolkit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
#    "amplify-stateless>=1.0.0",
    "Pillow>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["image_format_conversion_service"]
